--- a/admin-server/views/internshiplist.ejs
+++ b/admin-server/views/internshiplist.ejs
@@ -1,7 +1,7 @@
 <%- include('layout/header') %>
 
 <div class="container mx-auto py-10">
-    <h2 class="text-3xl font-bold text-center mb-10">Company List</h2>
+    <h2 class="text-3xl font-bold text-center mb-10">Company wise List</h2>
     
     <!-- Vertical Company List -->
     <div class="max-w-4xl mx-auto space-y-6">
