redirct issue of filter in job-list fixed

--- a/applicant-server/views/job-list.ejs
+++ b/applicant-server/views/job-list.ejs
@@ -378,7 +378,8 @@
   function clearAll(){
     document.querySelectorAll('input[type="checkbox"]').forEach(checkbox => {
         checkbox.checked = false;
-    });
+      });
+      window.location.href = '/jobs';
   }
   
 </script>
