redirect issue of filter in internship-list is fixed

--- a/applicant-server/views/internship-list.ejs
+++ b/applicant-server/views/internship-list.ejs
@@ -392,6 +392,7 @@
                     document.querySelectorAll('input[type="checkbox"]').forEach(checkbox => {
                         checkbox.checked = false;
                     });
+                    window.location.href = '/internships';
                 }
 
                 document.addEventListener("DOMContentLoaded", function () {
